fix langs align for rtl

--- a/Maps Agenda/war/maps2/css/main.css
+++ b/Maps Agenda/war/maps2/css/main.css
@@ -82,6 +82,7 @@ body {
   margin: 0;
   overflow: hidden;
   padding: 0;
+  text-align: left;
 }
 
 .sidebar ul a {
